fix: overflow issues

--- a/src/components/DisplayNote/note.css
+++ b/src/components/DisplayNote/note.css
@@ -8,12 +8,16 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    word-break: break-all;
 }
 
 .note p{
     margin: 0.5rem 0;
-    width: 33ch;
+    width: 32ch;
+}
 
+.note h4{
+    width: 30ch;
 }
 
 .note .note-tools{
@@ -41,6 +45,7 @@
     flex-wrap: wrap;
     gap: 0.2rem;
     align-items: center;
+    max-width: 80%;
 }
 
 .label-pills span{
@@ -49,4 +54,8 @@
     border-radius: 1rem;
     padding: 0.2rem 0.4rem;
     height: fit-content;
+    max-width: 5rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
