--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -13,7 +13,7 @@
     align-items: center;
     gap: 1rem;
     padding: 0.8rem 2.5rem 0.8rem 1.5rem;
-    margin: 1rem 2rem 1rem 1rem;
+    margin: 1rem;
     font-size: 1.2rem;
     color: var(--text-color);
     border-radius: var(--border-radius);
@@ -41,6 +41,13 @@
     justify-content: center;
     margin-left: 5rem;
     gap: 0.5rem;
+    max-width: 8rem;
+}
+
+.label-list li{
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 @media only screen and (max-width:900px) {
